@@ -44,4 +44,15 @@ my %args;
   );
 }
 
+{
+  $snmp->add_custom_request_method(custom => sub { shift; %args = @_ });
+  $snmp->prepare('1.2.3.4', { stash => { a => 1 }, version => '2c', maxrepetitions => 10 }, custom => [qw/ 1.3.6.1.2.1.1.4.0 /]);
+  $snmp->_prepare_request;
+  is_deeply(
+    [ sort keys %args ],
+    [ qw( callback maxrepetitions stash varbindlist version ) ],
+    'custom was called with all input args',
+  );
+}
+
 done_testing;
